--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.1.6",
+    "vue-scroll-behavior": "^0.2.0",
     "vue-swal": "^1.0.0",
     "vuex": "^3.4.0"
   },
