--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.4",
+    "plyr": "^3.6.2",
     "vue": "^2.6.11",
+    "vue-core-video-player": "^0.1.9",
+    "vue-dplayer": "0.0.10",
     "vue-page-transition": "^0.2.2",
+    "vue-plyr": "^6.0.4",
     "vue-router": "^3.1.6",
     "vue-scroll-behavior": "^0.2.0",
     "vue-swal": "^1.0.0",
